k8s/simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zydus-simulator
  namespace: zydus-pm
  labels:
    app: zydus-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zydus-simulator
  template:
    metadata:
      labels:
        app: zydus-simulator
    spec:
      containers:
        - name: sensor-simulator
          image: zydus-pm-simulator:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
